--- a/Proyecto 10/html/about.html
+++ b/Proyecto 10/html/about.html
@@ -10,7 +10,7 @@
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
-    <script defer src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script defer src="/js/sweetalert.js"></script>
 
     <script defer src="/js/session.js"></script>
     <script defer src="/js/carousel.js"></script>
