--- a/Proyecto 10/html/cart.html
+++ b/Proyecto 10/html/cart.html
@@ -111,7 +111,7 @@
                                     </div>
                                 </div>
                                 <div class="cart-footer text-right">
-                                    <button type="submit" class="btn btn-success my-1">Proceed to Checkout<i
+                                    <button type="submit" class="btn btn-success my-1 order">Proceed to Checkout<i
                                             class="ri-arrow-right-line ml-2"></i></button>
                                 </div>
                             </div>
