--- a/Proyecto 10/index.html
+++ b/Proyecto 10/index.html
@@ -13,15 +13,15 @@
     <script defer src="/js/sweetalert.js"></script>
 
     <script defer src="/js/session.js"></script>
-    <script defer src="js/index.js"></script>
-    <script defer src="js/carousel.js"></script>
+    <script defer src="/js/index.js"></script>
+    <script defer src="/js/carousel.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/fontawesome.min.css" />
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <title>Shop</title>
 </head>
