--- a/Proyecto 10/html/product.html
+++ b/Proyecto 10/html/product.html
@@ -50,8 +50,7 @@
                         </li>
                     </ul>
                     <div class="d-flex">
-                        <a href="/html/login.html" id="loginButton" class="shadow-none btn mr-1"><i
-                                class="bi bi-person-fill"></i></a>
+                        <a href="/html/login.html" id="loginButton" class="shadow-none btn mr-1"><i class="bi bi-person-fill"></i></a>
                         <a href="/html/cart.html" class="shadow-none btn ml-1"><i class="bi bi-cart-fill"></i></a>
                     </div>
                 </div>
