--- a/Proyecto 11/index.html
+++ b/Proyecto 11/index.html
@@ -19,13 +19,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/fontawesome.min.css" />
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+
+    <title>Shop</title>
 </head>
 
 <body>
     <div id="app">
-        <menu-nav :page-changer="changePage" :page="page" name="Project 10"></menu-nav>
+        <menu-nav :page-changer="changePage" :page="page"></menu-nav>
         <div class="container">
             <div class="carousel mt-3">
                 <i class="bi bi-arrow-left-circle-fill btnPrevious"></i>
@@ -34,7 +35,7 @@
                 </ul>
             </div>
             <main class="p-5 mb-4">
-                <product-list v-if="page === 1"></product-list>
+                <index v-if="page === 1"></index>
                 <contact v-else-if="page === 2"></contact>
                 <about v-else-if="page === 3"></about>
                 <login :page-changer="changePage" v-else-if="page === 4"></login>
