--- a/Proyecto 11/index.html
+++ b/Proyecto 11/index.html
@@ -38,8 +38,8 @@
                 <index v-if="page === 1"></index>
                 <contact :page-changer="changePage" :getCookie="getCookie" v-else-if="page === 2"></contact>
                 <about v-else-if="page === 3"></about>
-                <login :page-changer="changePage" v-else-if="page === 4"></login>
-                <register :page-changer="changePage" v-else-if="page === 5"></register>
+                <login :page-changer="changePage" :getCookie="getCookie" :setCookie="setCookie" v-else-if="page === 4"></login>
+                <register :page-changer="changePage" :getCookie="getCookie" :setCookie="setCookie" v-else-if="page === 5"></register>
                 <cart :page-changer="changePage" v-else-if="page === 6"></cart>
                 <product v-else-if="page === 7"></product>
             </main>
