--- a/Proyecto 11/index.html
+++ b/Proyecto 11/index.html
@@ -13,7 +13,9 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
     <script defer src="/js/sweetalert.js"></script>
 
-    <script defer src="js/app.js"></script>
+    <script defer src="/js/app.js"></script>
+    <script defer src="/js/vue.js"></script>
+    <script defer src="/js/carousel.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
@@ -35,11 +37,11 @@
                 </ul>
             </div>
             <main class="p-5 mb-4">
-                <index v-if="page === 1"></index>
-                <contact :page-changer="changePage" :getCookie="getCookie" v-else-if="page === 2"></contact>
+                <index :page-changer="changePage" :set-cookie="setCookie" v-if="page === 1"></index>
+                <contact :page-changer="changePage" :get-cookie="getCookie" v-else-if="page === 2"></contact>
                 <about v-else-if="page === 3"></about>
-                <login :page-changer="changePage" :getCookie="getCookie" :setCookie="setCookie" v-else-if="page === 4"></login>
-                <register :page-changer="changePage" :getCookie="getCookie" :setCookie="setCookie" v-else-if="page === 5"></register>
+                <login :page-changer="changePage" :get-cookie="getCookie" :set-cookie="setCookie" v-else-if="page === 4"></login>
+                <register :page-changer="changePage" :get-cookie="getCookie" :set-cookie="setCookie" v-else-if="page === 5"></register>
                 <cart :page-changer="changePage" v-else-if="page === 6"></cart>
                 <product v-else-if="page === 7"></product>
             </main>
